@@ -24,17 +24,17 @@
     </configurations>
 
     <dependencies>
-      <dependency org="org.eclipse.jetty" name="jetty-continuation" rev="8.1.2.v20120308" transitive="false"/>
-      <dependency org="org.eclipse.jetty" name="jetty-deploy" rev="8.1.2.v20120308" transitive="false"/>
-      <dependency org="org.eclipse.jetty" name="jetty-http" rev="8.1.2.v20120308" transitive="false"/>
-      <dependency org="org.eclipse.jetty" name="jetty-io" rev="8.1.2.v20120308" transitive="false"/>
-      <dependency org="org.eclipse.jetty" name="jetty-jmx" rev="8.1.2.v20120308" transitive="false"/>
-      <dependency org="org.eclipse.jetty" name="jetty-security" rev="8.1.2.v20120308" transitive="false"/>
-      <dependency org="org.eclipse.jetty" name="jetty-server" rev="8.1.2.v20120308" transitive="false"/>
-      <dependency org="org.eclipse.jetty" name="jetty-servlet" rev="8.1.2.v20120308" transitive="false"/>
-      <dependency org="org.eclipse.jetty" name="jetty-util" rev="8.1.2.v20120308" transitive="false"/>
-      <dependency org="org.eclipse.jetty" name="jetty-webapp" rev="8.1.2.v20120308" transitive="false"/>
-      <dependency org="org.eclipse.jetty" name="jetty-xml" rev="8.1.2.v20120308" transitive="false"/>
+      <dependency org="org.eclipse.jetty" name="jetty-continuation" rev="8.1.7.v20120910" transitive="false"/>
+      <dependency org="org.eclipse.jetty" name="jetty-deploy" rev="8.1.7.v20120910" transitive="false"/>
+      <dependency org="org.eclipse.jetty" name="jetty-http" rev="8.1.7.v20120910" transitive="false"/>
+      <dependency org="org.eclipse.jetty" name="jetty-io" rev="8.1.7.v20120910" transitive="false"/>
+      <dependency org="org.eclipse.jetty" name="jetty-jmx" rev="8.1.7.v20120910" transitive="false"/>
+      <dependency org="org.eclipse.jetty" name="jetty-security" rev="8.1.7.v20120910" transitive="false"/>
+      <dependency org="org.eclipse.jetty" name="jetty-server" rev="8.1.7.v20120910" transitive="false"/>
+      <dependency org="org.eclipse.jetty" name="jetty-servlet" rev="8.1.7.v20120910" transitive="false"/>
+      <dependency org="org.eclipse.jetty" name="jetty-util" rev="8.1.7.v20120910" transitive="false"/>
+      <dependency org="org.eclipse.jetty" name="jetty-webapp" rev="8.1.7.v20120910" transitive="false"/>
+      <dependency org="org.eclipse.jetty" name="jetty-xml" rev="8.1.7.v20120910" transitive="false"/>
       <dependency org="org.eclipse.jetty.orbit" name="javax.servlet" rev="3.0.0.v201112011016" transitive="false" conf="servlet->default">
         <artifact name="javax.servlet" type="orbit" ext="jar"/>
       </dependency>
